syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/the-medo/talebound-backend/pb";


enum ImageTypeVariant {
  unknownImageTypeVariant = 0;
  v30x30 = 1;
  v100x100 = 2;
  v150x150 = 3;
  v200x200 = 4;
  v300x300 = 5;
  v1200x800 = 6;
  v1920x200 = 7;
  public = 8;
}

message ImageType {
  int32 id = 1;
  string name = 2;
  string description = 3;
  ImageTypeVariant variant = 4;
}

message Image {
  int32 id = 1;
  string img_guid = 2;
  int32 image_type_id = 3;
  string name = 4;
  string url = 5;
  string base_url = 6;
  google.protobuf.Timestamp created_at = 7;
  int32 user_id = 8;
}